In menu category, group the last word of category name with triangle arrow. This will make sure triangle arrow won't move to a different line alone. - In menu.js (line 77-89), create wrapTriangleArrowAndLastWordOfMenuCategory   to wrap the last word of category name and triangle arrow in the menu. - In menu.js (line 73), selectMetadata.js (line 166), call   wrapTriangleArrowAndLastWordOfMenuCategory to wrap the last word of   category name and triangle arrow after the menu is rendered. - In opus.css (line 350-380), add the styling create triangle arrow and   make it align with menu category string. - In menu.html (line 9,31), add the span tag (".op-menu-arrow") inside   the ".title" span tag. ".op-menu-arrow" is the triangle arrow and will   be wrapped with the last word of category name later.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -347,6 +347,37 @@ to 100%, this will make the shrinking look smoother */
     -webkit-transform: rotate(-90deg);
 }
 
+/* Rotate triangle arrows when menu category is clicked */
+.op-search-menu .dropdown-toggle .op-menu-arrow {
+    transition: all .3s;
+    -webkit-transition: all .3s;
+}
+.op-search-menu .dropdown-toggle.collapsed .op-menu-arrow {
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+}
+
+/* Css styling for triangle arrow pointing right */
+.op-menu-arrow {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #000;
+    display: inline-block;
+}
+
+/* Make sure triangle arrow is veritcally centered */
+.op-menu-triangle-group {
+    display: inline-flex;
+    align-items: center;
+}
+
+/* Hide the default bootstrap dropdown triangle arrow */
+.op-search-menu .dropdown-toggle::after {
+    display: none !important;
+}
+
 .sidebar_wrapper {
     display: flex;
     margin: 0;
